# someone

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile.toml  README.md  codecov.yml  story.org
.github/workflows/: build.yml
cmake/: Networking.cmake  SDL.cmake  SDL_mixer.cmake
resources/mods/: modding.org
resources/mods/example/: main.lua  main.yml  mod.yml
resources/mods/example/resources/rooms/: arkanoid.toml  assets.toml
resources/mods/hacking_match/: main.lua  mod.yml
resources/mods/hacking_match/resources/protobuf/: game.proto
resources/mods/hacking_match/resources/rooms/: assets.toml  hacking_match.toml
resources/mods/wtktotf/: main.fnl  mod.yml
resources/mods/wtktotf/resources/rooms/: assets.toml  wtktotf.toml  wtktotf_menu.toml
resources/rooms/: assets.toml  computer_room.toml  computer_room_first_puzzle.toml  first_puzzle_room.toml  notes.toml
resources/rooms/day1/: computer_room.toml
resources/rooms/day2/: computer_room.toml  first_puzzle_room.toml
resources/rooms/day3/: computer_room.lua  computer_room.toml  first_puzzle_room.toml
resources/rooms/day4/: cave.toml  cave_2.toml  computer_room.toml  first_puzzle_room.toml  food_room.toml  status_room.toml  walkway_room.toml
resources/rooms/day5/: computer_room.toml  status_room.toml  upper_door.toml  upper_hall.toml
resources/rooms/prefabs/: dial.toml  first_puzzle_button.toml  interaction_text.toml  look_closer_image.toml  note.toml  passage.toml  player.toml
resources/rooms/prefabs/food_room/: look_at_can.toml
resources/rooms/prefabs/status_room/: computer.toml
resources/rooms/prefabs/upper_door/: look_door.toml  look_outside.toml
resources/rooms/prefabs/walkway/: look_down.toml  look_up.toml
resources/shaders/: cave.frag  circle_light.frag  common.vert  room_darker.frag
resources/sounds/dial_jingle/: dial_jingle.mmpz
resources/sounds/puzzle_jingle/: puzzle_jingle.mmpz
resources/sprites/: cover.aseprite
resources/sprites/environments/: midnight_forest.aseprite  midnight_village.aseprite  narra_hall.aseprite
resources/sprites/mainchar/: mainchar.aseprite  mainchar.json
resources/sprites/room/: first_puzzle_room.aseprite  first_puzzle_room_table.aseprite  light.aseprite  room.aseprite  table_lamp.aseprite  table_note.aseprite
resources/sprites/room/button/: button.aseprite  button.json
resources/sprites/room/cave_tileset/: cave.tmj  cave.tsj  cave_2.tmj  cave_tileset.aseprite  cave_tileset.json
resources/sprites/room/dial/: dial.aseprite
resources/sprites/room/food_room/: food_room.aseprite  food_room_look_at_can.aseprite
resources/sprites/room/note/: note.aseprite  note.json
resources/sprites/room/passage/: passage.aseprite
resources/sprites/room/status_room/: computer_screen.aseprite  status_room.aseprite
resources/sprites/room/table/: table.aseprite
resources/sprites/room/upper_door/: look_door.aseprite  look_outside.aseprite  look_outside.json  upper_door.aseprite
resources/sprites/room/upper_hall/: upper_hall.aseprite
resources/sprites/room/walkway_room/: look_up.aseprite  walkway_room.aseprite
resources/story/: prologue.yml
resources/story/day1/: forest_and_village.yml  narra_house.yml  narrator_house.yml  prologue.yml
resources/story/day2/: city_center.yml  city_suburbs.yml  evening.yml  morning.yml  road_questions.yml
resources/story/day3/: evening.yml  forest_back.yml  forest_search.yml  village.yml
resources/story/day4/: evening.yml  morning.yml
resources/story/instances/: forest.yml  hunger.yml  menu.yml
resources/story/save_load/: save_load.yml
resources/story/talks/: maj.yml  narra.yml
scenes/: chapter_1.yml  chapter_2.yml  chapter_3.yml  chapter_4.yml  chapter_5.yml  chapter_6.yml  prologue.yml
scenes/chapter_2/: jehovah.yml
src/: coroutines.hpp  fonts.cpp  fonts.hpp  keyboard.hpp  line_data.hpp  lines.hpp  logger.hpp  lua_module_env.hpp  lua_testing.hpp  main.cpp  main.rs  mainchar.hpp  scene_parser.rs  sound.cpp  sound.hpp  story_parser.cpp  story_parser.hpp  string_utils.cpp  string_utils.hpp  term.cpp  term.hpp  term.rs  terminal.hpp  toml.cpp  toml.hpp  usertypes.cpp  usertypes.hpp  vn.rs  walking.hpp
src/lines/: description_line.hpp  lines.hpp  shared.hpp  terminal_output_line.hpp  terminal_variant_input_line.hpp
src/lua/: bump-3.1.7-1.rockspec  coroutines.lua  coroutines.moon  lovetoys-0.4.0-2.rockspec  lua-toml-2.1-0.rockspec  lume-2.3.0-0.rockspec  middleclass-4.1.2-0.rockspec  rockspec  someone-0.1-0.rockspec  terminal.lua  util.lua  util.moon  vacances.lua  walking.lua  walking.moon
src/lua/components/: assets.lua  assets.moon  collider.lua  collider.moon  debug.lua  debug.moon  dial_puzzle.lua  dial_puzzle.moon  entities.lua  entities.moon  first_puzzle.lua  first_puzzle.moon  interaction.lua  interaction.moon  look_closer.lua  note.lua  note.moon  passage.lua  player.lua  player.moon  rooms.lua  rooms.moon  shared.lua  shared.moon  sound.lua  sound.moon  status_room.lua  tilemap.lua  walkway.lua
src/lua/terminal/: instance_menu.lua  lines.lua  mod_lines.lua  save_and_return_lines.lua  save_load_menu.lua  select_line.lua
src/usertypes/: imgui.cpp  networking.cpp  sfml.cpp
src/vn/: buttons.rs
src/web_stubs/: emscripten_template.html
src/web_stubs/SFML/Graphics/: Color.hpp  Drawable.hpp  RectangleShape.hpp  RenderTarget.hpp  RenderTexture.hpp  Shader.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transformable.hpp  View.hpp
src/web_stubs/SFML/System/: Clock.hpp  Rect.hpp  Vector2.hpp  Vector3.hpp
src/web_stubs/SFML/Window/: Window.hpp
src/web_stubs/sol/: sol.hpp
test/cpp/: main.cpp  story_parser_test.cpp  toml_test.cpp
test/lua/: .luacov  someone-test-0.1-0.rockspec  util_test.moon  walking.moon  walking_data.moon  walking_test.moon
test/resources/rooms/test1/: test.toml
test/resources/rooms/test1/results/: add_transformable_test.toml  inline_add_collider_test.toml  inline_remove_collider.toml  inline_remove_mode.toml  (+5 more)
test/resources/story/test/: custom.yml  dialogue_between.yml  numbered_lines.yml  reference.yml  referenced.yml  referenced_2.yml  text_input.yml
(+29 files in other folders)
